--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: kayztv
-description: A new Flutter project.
+description: The official Kayz Tv app.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -29,8 +29,8 @@ dependencies:
   intl: ^0.16.1 
   font_awesome_flutter: ^8.8.1
   workmanager: ^0.2.3
-  flutter_local_notifications: ^1.4.4+4
-  shared_preferences: ^0.4.2 
+  flutter_local_notifications: ^1.4.4+2
+  shared_preferences: ^0.5.12 
   fluttertoast: ^7.1.1
   
   # The following adds the Cupertino Icons font to your application.
@@ -87,5 +87,5 @@ flutter:
 flutter_icons:
   ios: true
   android: true
-  image_path_ios: "assets/launcher/kayz_logo.jpeg"
-  image_path_android: "assets/launcher/kayz_logo.jpeg"
+  image_path_ios: "assets/launcher/kayz_logo.png"
+  image_path_android: "assets/launcher/kayz_logo.png"
