--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+4
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -24,14 +24,15 @@ dependencies:
   flutter:
     sdk: flutter
   video_player:
-  chewie: 0.9.10 
+  chewie: ^0.9.10 
   http: 0.12.2
   intl: ^0.16.1 
   font_awesome_flutter: ^8.8.1
   workmanager: ^0.2.3
   flutter_local_notifications: ^1.4.4+2
   shared_preferences: ^0.5.12 
-  fluttertoast: ^7.1.1
+  fluttertoast: ^7.1.1 
+  cached_network_image: ^2.3.3
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
